; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_time.c_etr_set_tolec_timeout.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/s390/kernel/extr_time.c_etr_set_tolec_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@etr_eacr = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@etr_port0_uptodate = common dso_local global i64 0, align 8
@etr_port1_uptodate = common dso_local global i64 0, align 8
@etr_tolec = common dso_local global i64 0, align 8
@etr_timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@HZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @etr_set_tolec_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @etr_set_tolec_timeout(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @etr_eacr, i32 0, i32 1), align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i64, i64* @etr_port0_uptodate, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %6, %1
  %10 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @etr_eacr, i32 0, i32 0), align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %9
  %13 = load i64, i64* @etr_port1_uptodate, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %12, %9
  br label %44

16:                                               ; preds = %12, %6
  %17 = load i64, i64* %2, align 8
  %18 = load i64, i64* @etr_tolec, align 8
  %19 = icmp ugt i64 %17, %18
  br i1 %19, label %20, label %25

20:                                               ; preds = %16
  %21 = load i64, i64* %2, align 8
  %22 = load i64, i64* @etr_tolec, align 8
  %23 = sub i64 %21, %22
  %24 = lshr i64 %23, 12
  br label %26

25:                                               ; preds = %16
  br label %26

26:                                               ; preds = %25, %20
  %27 = phi i64 [ %24, %20 ], [ 0, %25 ]
  store i64 %27, i64* %3, align 8
  %28 = load i64, i64* %3, align 8
  %29 = icmp ugt i64 %28, 1600000
  br i1 %29, label %30, label %31

30:                                               ; preds = %26
  br label %34

31:                                               ; preds = %26
  %32 = load i64, i64* %3, align 8
  %33 = sub i64 1600000, %32
  br label %34

34:                                               ; preds = %31, %30
  %35 = phi i64 [ 0, %30 ], [ %33, %31 ]
  store i64 %35, i64* %3, align 8
  %36 = load i64, i64* @jiffies, align 8
  %37 = load i64, i64* %3, align 8
  %38 = load i64, i64* @HZ, align 8
  %39 = mul i64 %37, %38
  %40 = udiv i64 %39, 1000000
  %41 = add i64 %36, %40
  %42 = add i64 %41, 1
  %43 = call i32 @mod_timer(i32* @etr_timer, i64 %42)
  br label %44

44:                                               ; preds = %34, %15
  ret void
}

declare dso_local i32 @mod_timer(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
